# value_logic

./: .gitattributes  .gitignore  CODE_GUIDE.md  README.md  TODO.md  paper.md  paper_outline.md  references.bib
experiments/: 00_pilot.md  01_design.md  02_implementation.md  02_results.md  03_execution_repair.md  __init__.py  analysis_v1_1.json  analyze_results.py  artifact_io.py  build_cpp_kernel.py  calibration_checkpoint_v1_1.json  cpp_kernel.py  fit_checkpoint_v1_1.json  implementation.py  implementation_repair_pilot_v1_1.json  implementation_smoke_v1.json  implementation_v1.json  implementation_v1_1.json  learner.py  manifests_v1.json  pilot_results_v1.json  protocol.py  protocol_v1.json  repaired_evaluator.py  requirements.txt  run_experiment.py  run_pilot.py  run_repaired_experiment.py  selection_checkpoint_v1_1.json  system_witness.py  task21_failure_attempt1.json  task21_failure_attempt1.md  task21_interruption_attempt2.json  task21_runtime_diagnosis.md
experiments/cpp/: CMakeLists.txt  value_logic_kernel.cpp  value_logic_kernel.h  value_logic_kernel_self_test.cpp
formalism/: 01_signature.md  02_license_semantics.md  03_consequence_update.md  04_dominance_retention.md  05_atlas.md  05a_integration.md  06_open_endedness.md  07_core_calculus.md  08_metatheory.md  08a_transport_routing.md  08b_audit_repairs.md  08c_proof_carrying_plans.md  09_judgment_information.md  10_policy_value_reconstruction.md
llm_convos/: README.md  chatgpt.txt  claude.txt  claude_audit_2026-07-11.md  claude_audit_2026-07-12.md  claude_audit_2026-07-14.md  claude_audit_2026-07-17.md  (+1 more)
(+56 files in other folders)
